Product and Category entities Generate CRUD razor components for Category and Product Context

--- a/BlazorScaffoldingNoAuth/appsettings.json
+++ b/BlazorScaffoldingNoAuth/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlazorScaffoldingNoAuthContext": "Data Source=BlazorScaffoldingNoAuthContext-aea83d68-827a-478b-8dc2-b92315162c61.db"
+  }
 }
